# oi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  flake.nix  install.sh  rustfmt.toml  uninstall.sh
.github/workflows/: release.yml  rust.yml
etc/completions/: _oi  _oi.ps1  oi.bash  oi.fish
etc/completions/generate/: Cargo.toml
etc/deprecated/: quotes.rs
src/: cli.rs  io_functions.rs  main.rs  selectors.rs  stuff.rs
src/selectors/: basic1.rs  basic2.rs  clock.rs  conversions.rs  currency.rs  define.rs  holidays.rs  lists.rs  lyrics.rs  maths.rs  mod.rs  pronounce.rs  snippets1.rs  snippets2.rs  sports.rs  summary.rs  translate.rs  weather.rs
