[package]
name = "oi"
version = "0.2.0"
authors = ["David Sherriff <d.sherriff.81@gmail.com>"]
edition = "2021"
description = "trivia on the command line."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0"
chrono = "~0.4"
clap = { version = "3.0.0-beta.5", features = ["wrap_help"] }
comfy-table = "~5.0"
crossterm = "~0.22"
glob = "~0.3.0"
scraper = "~0.12"
ureq = { version = "~2.3", features = ["charset"] }
whoami = "~1.2"
