[package]
name = "oi"
version = "0.2.1"
authors = ["Vysakh Premkumar <vysakhpr218@gmail.com>"]
edition = "2021"
description = "trivia on the command line."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oi"
path = "src/main.rs"


[dependencies]
anyhow = "~1.0"
chrono = "~0.4"
clap = { version = "~3.0", features = ["wrap_help"] }
comfy-table = "~5.0"
crossterm = "~0.22"
glob = "~0.3"
scraper = "~0.12"
ureq = { version = "~2.4", features = ["charset"] }
whoami = "~1.2"

